adding new html files

--- a/index.html
+++ b/index.html
@@ -11,13 +11,35 @@
 
 <body>
     <header>
-
+        <div class="img-container-header">
+        <img class="logo" src="https://placehold.it/300x105/fff" alt="">
+    </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="#article">Articles</a>
+            <a href="form.html">Healthy Weight</a>
+            <a href="aboutus.html">About us</a>
+            <a href="#contact">Contact Us</a>
+        </nav>
     </header>
     <main>
-
+        <div class="hero">
+            <video id="video-hero" autoplay muted loop>
+                <source src="assets/hero-background.mp4" type="video/mp4">
+            </video>
+            <div class="hero-text">
+                <h1>Health and Care</h1>
+                <p>Lorlishing software like Aldus PageMaker including versions of Lorem Ipsum.ing versions of Lorem Ipsum. ing versions of Lorem Ipsum.</p>
+               </div>
+        </div>
+        <div class="our-services">
+            <div class="container">
+            <div class="services-intro"><h2>Our Services</h2></div> 
+            </div>         
+        </div>
     </main>
     <footer>
-
+        copy rights 2021
     </footer>
     <script src="js/app.js"></script>
 </body>
