--- a/articles.html
+++ b/articles.html
@@ -4,26 +4,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Articles</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/articles.css">
 </head>
 
 <body>
     <header>
         <div class="img-container-header">
-        <img class="logo" src="https://placehold.it/300x105/fff" alt="">
-    </div>
+            <img class="logo" src="https://placehold.it/300x105/fff" alt="">
+        </div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#article">Articles</a>
+            <a href="articles.html">Articles</a>
             <a href="form.html">Healthy Weight</a>
             <a href="aboutus.html">About us</a>
             <a href="#contact">Contact Us</a>
         </nav>
     </header>
     <main>
-        main article
+        <h1>Articles</h1>
+        <section id="category1Name">
+            <h3>Category 1</h3>
+            <details id="article1">
+                <summary>Article 1 Headline</summary>
+                <p>Article paragraph and sources.
+                    <br>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit nihil culpa ut adipisci officia quod
+                    velit cum quis inventore quas sequi expedita, enim laborum aut ullam iure maxime dolorem totam.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ea harum ab maxime quidem odio
+                    ipsam quod sit atque. Debitis ad deleniti tempora expedita recusandae atque praesentium ratione
+                    quidem? Quae. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit iusto reiciendis saepe
+                    porro delectus eius dolor, harum amet voluptatum impedit itaque totam unde placeat et? Doloribus
+                    tempora perferendis ea odio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum ut
+                    eveniet nihil alias optio consectetur perspiciatis sunt illum voluptates! Voluptas porro, illum
+                    recusandae eveniet nobis natus nam distinctio eligendi reiciendis.
+                </p>
+            </details>
+            <details id="article2">
+                <summary>Article 2 Headline</summary>
+                <p>Article paragraph and sources.</p>
+            </details>
+            <details id="article3">
+                <summary>Article 3 Headline</summary>
+                <p>Article paragraph and sources.</p>
+            </details>
+        </section>
+        <section id="category2Name">
+            <h3>Category 2</h3>
+            <details id="articleName1">
+                <summary>Article 1 Headline</summary>
+                <p>Article paragraph and sources.</p>
+            </details>
+            <details id="articleName2">
+                <summary>Article 2 Headline</summary>
+                <p>Article paragraph and sources.</p>
+            </details>
+            <details id="articleName3">
+                <summary>Article 3 Headline</summary>
+                <p>Article paragraph and sources.</p>
+            </details>
+        </section>
+        <section id="category3Name">
+            <h3>Category 3</h3>
+            <details id="articleName31">
+                <summary>Article 1 Headline</summary>
+                <p>Article paragraph and sources.</p>
+            </details>
+            <details id="articleName32">
+                <summary>Article 2 Headline</summary>
+                <p>Article paragraph and sources.</p>
+            </details>
+            <details id="articleName33">
+                <summary>Article 3 Headline</summary>
+                <p>Article paragraph and sources.</p>
+            </details>
+        </section>
     </main>
     <footer>
         copy rights 2021
