adding the preload and the logo

--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="img-container-header">
-        <img class="logo" src="https://placehold.it/300x105/fff" alt="">
+            <img class="logo" src="assets/logo.gif" alt="">
 
     </div>
         <nav>
