--- a/Article.html
+++ b/Article.html
@@ -11,13 +11,15 @@
 
 <h1 id="Art">Articles</h1>
 
+
 <div id="card1">
  
     
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="img/7458162.jpg" alt="Avatar" style="width:300px;height:300px;">
+          <div style="width:300px;height:300px; background-color: rgb(92, 105, 104); border-right: 1px solid blue;">
+            
         </div>
         <div class="flip-card-back">
           <h1>Heart Deseas</h1> 
