--- a/articles.html
+++ b/articles.html
@@ -14,7 +14,7 @@
     <header>
         <div class="img-container-header">
             <a href="index.html"><img class="logo" src="assets/logo.gif" alt=""></a>
-    </div>
+        </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="articles.html">Articles</a>
@@ -26,25 +26,64 @@
     <main>
         <h1>Articles</h1>
         <section id="category1Name">
-            <h3>Category 1</h3>
+            <h3> chronic Disease And healthy Diet </h3>
             <details id="article1">
-                <summary>Article 1 Headline</summary>
-                <p>Article paragraph and sources.
+                <summary>Heart Disease and Stroke</summary>
+                <p>Two of the leading causes of heart disease and stroke are high blood pressure and high blood
+                    cholesterol. Consuming too much sodium can increase blood pressure and the risk for heart disease
+                    and stroke. Current guidelines recommend getting less than 2,300 mg a day, but Americans consume
+                    more than 3,400 mg a day on average.
+                    Over 70% of the sodium that Americans eat comes from packaged, processed, store-bought, and
+                    restaurant foods. Eating foods low in saturated fats and high in fiber and increasing access to
+                    low-sodium foods, along with regular physical activity, can help prevent high blood cholesterol and
+                    high blood pressure.
+                    Choose healthy meal and snack options to help you avoid high blood pressure and its complications.
+                    Be sure to eat plenty of fresh fruits and vegetables.
+                    Talk with your health care team about eating a variety of foods rich in potassium, fiber, and
+                    protein and lower in salt (sodium) and saturated fat. For many people, making these healthy changes
+                    can help keep blood pressure low and protect against heart disease and stroke.
+                    Most of the sodium we consume is in the form of salt, and the vast majority of sodium we consume is
+                    in processed and restaurant foods. Your body needs a small amount of sodium to work properly, but
+                    too much sodium is bad for your health.
+                    Excess sodium can increase your blood pressure and your risk for heart disease and stroke. Together,
+                    heart disease and stroke kill more Americans each year than any other cause.
+                    [1]https://www.mayoclinic.org/diseases-conditions/diabetes/in-depth/diabetes-diet/art-20044295
+
                     <br>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit nihil culpa ut adipisci officia quod
-                    velit cum quis inventore quas sequi expedita, enim laborum aut ullam iure maxime dolorem totam.
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ea harum ab maxime quidem odio
-                    ipsam quod sit atque. Debitis ad deleniti tempora expedita recusandae atque praesentium ratione
-                    quidem? Quae. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit iusto reiciendis saepe
-                    porro delectus eius dolor, harum amet voluptatum impedit itaque totam unde placeat et? Doloribus
-                    tempora perferendis ea odio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum ut
-                    eveniet nihil alias optio consectetur perspiciatis sunt illum voluptates! Voluptas porro, illum
-                    recusandae eveniet nobis natus nam distinctio eligendi reiciendis.
                 </p>
             </details>
             <details id="article2">
-                <summary>Article 2 Headline</summary>
-                <p>Article paragraph and sources.</p>
+                <summary>Diabetes</summary>
+                <p>Diabetes is a chronic (long-lasting) disease that affects how your body turns food into energy. There
+                    are three main types of diabetes: type 1, type 2, and gestational diabetes (diabetes while
+                    pregnant). More than 122 million Americans are living with diabetes (34.2 million) or prediabetes
+                    (88 million).
+                    If you have diabetes or prediabetes, your doctor will likely recommend that you see a dietitian to
+                    help you develop a healthy-eating plan. The plan helps you control your blood sugar (glucose),
+                    manage your weight and control heart disease risk factors, such as high blood pressure and high
+                    blood fats.
+                    When you eat extra calories and fat, your body creates an undesirable rise in blood glucose. If
+                    blood glucose isn't kept in check, it can lead to serious problems, such as a high blood glucose
+                    level (hyperglycemia) that, if persistent, may lead to long-term complications, such as nerve,
+                    kidney and heart damage.
+                    You can help keep your blood glucose level in a safe range by making healthy food choices and
+                    tracking you’re eating habits.
+                    For most people with type 2 diabetes, weight loss also can make it easier to control blood glucose
+                    and offers a host of other health benefits. If you need to lose weight, a diabetes diet provides a
+                    well-organized, nutritious way to reach your goal safely.</p>
+
+                <h2>What does a diabetes diet involve?</h2>
+
+                <p>A diabetes diet is based on eating three meals a day at regular times. This helps you better use the
+                    insulin that your body produces or gets through a medication.
+                    A registered dietitian can help you put together a diet based on your health goals, tastes and
+                    lifestyle. He or she can also talk with you about how to improve your eating habits, such as
+                    choosing portion sizes that suit the needs for your size and activity level.
+                    Recommended foods
+                    Make your calories count with these nutritious foods. Choose healthy carbohydrates, fiber-rich
+                    foods, fish and "good" fats.
+
+                </p>
             </details>
             <details id="article3">
                 <summary>Article 3 Headline</summary>
@@ -52,33 +91,133 @@
             </details>
         </section>
         <section id="category2Name">
-            <h3>Category 2</h3>
+            <h3>healthy eating For Baby:</h3>
             <details id="articleName1">
-                <summary>Article 1 Headline</summary>
-                <p>Article paragraph and sources.</p>
+                <summary>Breastfeeding:</summary>
+                <p>
+                    Breast milk is the optimal nutrient mix for infants. It’s full of good stuff like antibodies,
+                    antimicrobial factors, enzymes, and anti-inflammatory factors along with fatty acids (which promote
+                    optimal brain development).
+                    Breastfeeding keeps the baby developing and growing properly, helps infants fight off disease (such
+                    as gastrointestinal and respiratory infections) both now and in the future, and may even ensure that
+                    the baby grows up to prefer healthy food.
+                    Because breastfeeding stimulates the release of beneficial hormones such as oxytocin and prolactin,
+                    it can help the mother lose weight and bond with her baby.
+                    Breast milk is delivered in a biodegradable “organic package”, so mom doesn’t need to use as much
+                    plastic packaging (since tiny humans easily absorb plastic-contained endocrine disruptors).
+                    [2] https://www.precisionnutrition.com/all-about-infant-nutrition
+                </p>
             </details>
             <details id="articleName2">
-                <summary>Article 2 Headline</summary>
-                <p>Article paragraph and sources.</p>
+                <summary>The First 6 Months </summary>
+                <p>Your baby is about to go through an amazing growth spurt. In their first year, babies triple their
+                    birth weight. To grow that much, they need a lot of nutrients -- more than at any other time in
+                    their life.
+                    Experts say breast milk is the best source of nutrition for babies during the first 6 months, but
+                    formula can be a good alternative.
+                    Nutrition and Your Growing Baby
+                    Some of the nutrients babies need to grow and stay healthy include:
+                    Calcium . Helps build strong bones and teeth.
+                    Fat. Creates energy, helps the brain develop, keeps skin and hair healthy, and protects against
+                    infections.
+                    Folate. Helps cells divide.
+                    Iron. Builds blood cells, and helps the brain develop. Breast-fed babies should receive iron
+                    supplements.
+                    Protein and carbohydrates. They provide energy and fuel growth.
+                    Zinc. Helps the cells grow and repair themselves</p>
+
+                <h2>Your baby also needs vitamins such as:</h2>
+                <ul>
+                    <li> Vitamin A. Keeps skin, hair, vision, and the immune system healthy.</li>
+                    <li> Vitamin B1 (thiamine). Helps the body turn food into energy.</li>
+                    <li> Vitamin B1 (thiamine). Helps the body turn food into energy.</li>
+                    <li> Vitamin B2 (riboflavin). Helps the body turn food into energy, and protects cells from damage.
+                    </li>
+                    <li> Vitamin B3 (niacin). Helps the body turn food into energy and use fats and protein.</li>
+                    <li> Vitamin B6. Keeps the brain and immune system healthy.</li>
+                    <li> Vitamin B12. Keeps nerve and blood cells healthy, and makes DNA -- the genetic material in
+                        every
+                        cell.</li>
+                    <li>Vitamin C. Protects against infections, builds bones and muscles, and helps wounds heal.</li>
+                    <li>Vitamin D. Helps the body absorb calcium from food, and keeps bones and teeth healthy.
+                        Breast-fed
+                        babies may need a D supplement.</li>
+                    <li> Vitamin E. Protects cells from damage, and strengthens the immune system.</li>
+                    <li>
+                        Vitamin K. Helps the blood to clot.</li>
+                </ul>
+                [3] https://www.webmd.com/parenting/baby/nutrition#2-6
+                </p>
+
             </details>
             <details id="articleName3">
-                <summary>Article 3 Headline</summary>
-                <p>Article paragraph and sources.</p>
+                <summary>What to Avoid </summary>
+                <p>One thing you don't want to give your baby during the first 12 months is whole cow's milk. It doesn't
+                    have enough iron, vitamin E, and essential fatty acids for your baby. Also, it contains too much
+                    protein, sodium, and potassium for your child's body to absorb and can cause harm. Wait to introduce
+                    cow's milk until your baby is 1-year-old.</p>
             </details>
         </section>
         <section id="category3Name">
-            <h3>Category 3</h3>
+            <h3>Healthy Diet</h3>
             <details id="articleName31">
-                <summary>Article 1 Headline</summary>
-                <p>Article paragraph and sources.</p>
+                <summary>What is a healthy diet?</summary>
+                <p>Eating a healthy diet is not about strict limitations, staying unrealistically thin, or depriving
+                    yourself of the foods you love. Rather, it’s about feeling great, having more energy, improving your
+                    health, and boosting your mood.
+                    Healthy eating doesn’t have to be overly complicated. If you feel overwhelmed by all the conflicting
+                    nutrition and diet advice out there, you’re not alone. It seems that for every expert who tells you
+                    a certain food is good for you; you’ll find another saying exactly the opposite. The truth is that
+                    while some specific foods or nutrients have been shown to have a beneficial effect on mood, it’s
+                    your overall dietary pattern that is most important. The cornerstone of a healthy diet should be to
+                    replace processed food with real food whenever possible. Eating food that is as close as possible to
+                    the way nature made it can make a huge difference to the way you think, look, and feel.
+                    By using these simple tips, you can cut through the confusion and learn how to create—and stick to—a
+                    tasty, varied, and nutritious diet that is as good for your mind as it is for your body.
+                </p>
             </details>
             <details id="articleName32">
-                <summary>Article 2 Headline</summary>
-                <p>Article paragraph and sources.</p>
+                <summary>The fundamentals of healthy eating</summary>
+                <p>While some extreme diets may suggest otherwise, we all need a balance of protein, fat, carbohydrates,
+                    fiber, vitamins, and minerals in our diets to sustain a healthy body. You don’t need to eliminate
+                    certain categories of food from your diet, but rather select the healthiest options from each
+                    category.
+                <h2>Protein </h2>
+                gives you the energy to get up and go—and keep going—while also supporting mood and
+                cognitive function. Too much protein can be harmful to people with kidney disease, but the latest
+                research suggests that many of us need more high-quality protein, especially as we age. That doesn’t
+                mean you have to eat more animal products—a variety of plant-based sources of protein each day can
+                ensure your body gets all the essential protein it needs.
+                <h2>Fat </h2>
+                Not all fat is the same. While bad fats can wreck your diet and increase your risk of certain
+                diseases, good fats protect your brain and heart. In fact, healthy fats—such as omega-3s—are vital
+                to your physical and emotional health. Including more healthy fat in your diet can help improve your
+                mood, boost your well-being, and even trim your waistline.
+
+                <h2>Fiber</h2>
+                Eating foods high in dietary fiber (grains, fruit, vegetables, nuts, and beans) can help you
+                stay regular and lower your risk for heart disease, stroke, and diabetes. It can also improve your
+                skin and even help you to lose weight. Learn more »
+                <h2> Calcium</h2>
+                As well as leading to osteoporosis, not getting enough calcium in your diet can also
+                contribute to anxiety, depression, and sleep difficulties. Whatever your age or gender, it’s vital
+                to include calcium-rich foods in your diet, limit those that deplete calcium, and get enough
+                magnesium and vitamins D and K to help calcium do its job.
+                <h2>Carbohydrates</h2>
+                are one of your body’s main sources of energy. But most should come from complex,
+                unrefined carbs (vegetables, whole grains, fruit) rather than sugars and refined carbs. Cutting back
+                on white bread, pastries, starches, and sugar can prevent rapid spikes in blood sugar, fluctuations
+                in mood and energy, and a build-up of fat, especially around your waistline.
+                </p>
             </details>
             <details id="articleName33">
-                <summary>Article 3 Headline</summary>
-                <p>Article paragraph and sources.</p>
+                <summary>It’s not just what you eat, but when you eat</summary>
+                <p>Eat breakfast, and eat smaller meals throughout the day. A healthy breakfast can jumpstart your
+                    metabolism, while eating small, healthy meals keeps your energy up all day.
+                    Avoid eating late at night. Try to eat dinner earlier and fast for 14-16 hours until breakfast the
+                    next morning. Studies suggest that eating only when you’re most active and giving your digestive
+                    system a long break each day may help to regulate weight.
+                </p>
             </details>
         </section>
     </main>
