--- a/form.html
+++ b/form.html
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/articles.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
         <div class="img-container-header">
-            <a href="index.html"><img class="logo" src="assets/logo.gif" alt=""></a>
+        <a href="index.html"><img class="logo" src="assets/logo.png" alt=""></a>
     </div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#article">Articles</a>
+            <a href="index.html#Art">Articles</a>
             <a href="form.html">Healthy Weight</a>
             <a href="aboutus.html">About us</a>
-            <a href="#contact">Contact Us</a>
+            <a href="index.html#contact">Contact Us</a>
         </nav>
     </header>
     <main>
