--- a/articles.html
+++ b/articles.html
@@ -13,14 +13,14 @@
 <body>
     <header>
         <div class="img-container-header">
-            <a href="index.html"><img class="logo" src="assets/logo.gif" alt=""></a>
+        <a href="index.html"><img class="logo" src="assets/logo.png" alt=""></a>
     </div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="articles.html">Articles</a>
+            <a href="index.html#Art">Articles</a>
             <a href="form.html">Healthy Weight</a>
             <a href="aboutus.html">About us</a>
-            <a href="#contact">Contact Us</a>
+            <a href="index.html#contact">Contact Us</a>
         </nav>
     </header>
     <main>
