--- a/form.html
+++ b/form.html
@@ -7,6 +7,7 @@
     <title>Form</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/form.css">
 </head>
 
 <body>
@@ -23,12 +24,13 @@
         </nav>
     </header>
     <main>
-         <div class="main-container">
-            <h2>Calculator</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus non, vero velit molestias nihil commodi
-                dolor impedit omnis nam nulla consequuntur, beatae ipsum, repellat iusto earum quae rem illo dolorum.
-            </p>
-            <button id="form-display"> Enter </button>
+        <div class="main-container">
+            <h1>Fitness and Health Calculator</h1>
+            <h2>BMR</h2>
+            <p> Basal Metabolic Rate is the number of calories your body needs to accomplish it's most basic
+                life-sustaining functions and It depends on how much your physical's activities ( Exercises ) are during the day.</p>
+             <h2>BMI</h2>
+             <p></p>   
 
             <div id="form-container">
                 <div class="tab">
@@ -109,7 +111,7 @@
                         <br>
 
                         <label for="Weight">Weight</label><br>
-                        <input placeholder="In kg" id="Weight"  class="input1" type="number">
+                        <input placeholder="In kg" id="Weight" class="input1" type="number">
                         <br>
 
                         <label for="Activity">Activity</label><br>
@@ -134,8 +136,10 @@
                     </form>
                 </div>
             </div>
-        </div> 
+        </div>
+        <div id="Results">
 
+        </div>
     </main>
     <footer>
         copy rights 2021
