--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="hero">
       <div class="background-overlay">
         <div class="hero-text">
+          <h2 id="nameUser"></h2>
           <h1>Health and Care</h1>
           <p>Lorlishing software like Aldus PageMaker including versions of Lorem Ipsum.ing versions of Lorem Ipsum. ing
             versions of Lorem Ipsum.</p>
